--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <h1>My Personal Website</h1>
       <h3>By Brandon Lanzarin</h3>
       <hr>
-      <img src="">
+      <img src="https://external-preview.redd.it/ov17Fdfqj37R-nXJ31XrOk46u3GRCh7fBwGwt4gTfS4.jpg?width=640&crop=smart&auto=webp&s=fe26cd60f8e6016d5a2c8296c99d21d4f5416dab">
         You’ve always been fascinated by the fact that an entertaining mobile application or sophisticated computer program all boils down to a string of code. How a bunch of letters, numbers and symbols assembled in the perfect order can power an entire software system.
       </p>
       <p>
