--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <title> Brandon Lanzarin's Personal Website</title>
     <body>
       <h1>My Personal Website</h1>
-      <h3>By Brandon Lanzarin</h3>
+      <h3>By: Brandon Lanzarin</h3>
+      
+      <img src="">
+        Hello & welcome to my personal website. My name is Brandon Lanzarin; and in this site, I will tell you some of my interests and where I come from. 
       <hr>
-      <img src="https://external-preview.redd.it/ov17Fdfqj37R-nXJ31XrOk46u3GRCh7fBwGwt4gTfS4.jpg?width=640&crop=smart&auto=webp&s=fe26cd60f8e6016d5a2c8296c99d21d4f5416dab">
-        You’ve always been fascinated by the fact that an entertaining mobile application or sophisticated computer program all boils down to a string of code. How a bunch of letters, numbers and symbols assembled in the perfect order can power an entire software system.
       </p>
+   <h1>About me</h1>
       <p>
-This curiosity is what led you to teach yourself some of the basic programming languages and dabble in the art of coding. Now you’re starting to think you could expand on those self-taught skills and pursue an actual programming career.
+I am 15 years old. I was born here in the US, but both my parents are from Mexico. For the first two years in my life, I lived in Miami, then my parents and I moved back to Mexico. For about 7 years, I stayed in Mexico in a pueblo located in Durango, called Pasaje. I lived there for a while but then we moved to Torreon, Coahuila
         </p>
       <p>
         If the scenario above describes you, you’re in luck! There are plenty of programming jobs for you to pursue in the world of technology. So whether you’d like to spend your entire days writing code or you’d like to use your programming knowledge to help drive overall business decisions, keep reading to familiarize yourself with some of the many coding careers out there.
