--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta name= "author" content= "CGHS">
     <meta name="viewport" content= "device-width, initial-scale=1.0">
     <title> Brandon Lanzarin's Personal Website</title>
+  <style>
+body {
+      background-color:black;
+      color:white;
+    }
+   
+h1 {
+      color:magenta;
+      font-style:Bold;
+    }
+h3 {
+      color:cyan;
+  font-style:italic;
+    }
+  </style>
     <body>
       <h1>My Personal Website</h1>
       <h3>By: Brandon Lanzarin</h3>
