--- a/index.html
+++ b/index.html
@@ -1,48 +1,60 @@
 <!DOCTYPE html>
  <head>
-    <meta name= "keywords" content="Employment tech programming development jobs">
-    <meta name= "description" content= "Coding employment for people with development skills">
-    <meta name= "author" content= "CGHS">
+    <meta name= "keywords" content="Brandon Lanzarin" "Coral Gables Senior High">
+    <meta name= "description" content= "My Personal Website Assignment">
+    <meta name= "author" content= "Brandon Lanzarin">
     <meta name="viewport" content= "device-width, initial-scale=1.0">
     <title> Brandon Lanzarin's Personal Website</title>
-  <style>
-body {
+   <style>
+          body {
       background-color:black;
       color:white;
     }
    
-h1 {
+          h1 {
       color:magenta;
       font-style:Bold;
     }
-h3 {
+          h3 {
       color:cyan;
   font-style:italic;
     }
-  </style>
+     .interests {
+       color:red;
+     }
+     #where-i-come-from {
+       color:cyan;
+     }
+     #favorite-manga {
+       font-style:italics;
+       font-family:Helvetica;
+       color:Red;
+       background-color:;
+     }
+   </style>
     <body>
       <h1>My Personal Website</h1>
       <h3>By: Brandon Lanzarin</h3>
       
       <img src="">
-        Hello & welcome to my personal website. My name is Brandon Lanzarin; and in this site, I will tell you some of my interests and where I come from. 
+        Hello & welcome to my personal website. My name is Brandon Lanzarin; and in this site, I will tell you some of my interests and where I come from.
       <hr>
       </p>
-   <h1>About me</h1>
+   <h2 id="where-i-come-from">About me</h2>
       <p>
-I am 15 years old. I was born here in the US, but both my parents are from Mexico. For the first two years in my life, I lived in Miami, then my parents and I moved back to Mexico. For about 7 years, I stayed in Mexico in a pueblo located in Durango, called Pasaje. I lived there for a while but then we moved to Torreon, Coahuila
+I am 15 years old. I was born here in the US, but both my parents are from Mexico. For the first two years in my life, I lived in Miami, then my parents and I moved back to Mexico. For about 7 years, I stayed in Mexico in a pueblo located in Durango, called Pasaje. I lived there for a while but then we moved to Torreon, Coahuila.
         </p>
       <p>
-        If the scenario above describes you, you’re in luck! There are plenty of programming jobs for you to pursue in the world of technology. So whether you’d like to spend your entire days writing code or you’d like to use your programming knowledge to help drive overall business decisions, keep reading to familiarize yourself with some of the many coding careers out there.
+        I don't remember the elementary or kindergarten I went to when I was in Mexico, but I do know the ones I was in here in the US.
       </p>
       <p>
         We used real-time job analysis software to examine more than 1.8 million job postings that list programming skills as a preference.1 The data helped us identify nine common programming careers to consider. Learn a little bit about these roles and see which of these coding jobs might appeal to you.
       </p>
       <h4>
         <ol>
-        <h4 class= "salary">Software Application Developer</h4>
+        <h4 class= "interests">Software Application Developer</h4>
         <ul>
-          <li>Salary:$109,000</li>
+          <li id="favorite-manga">Salary:$109,000</li>
           <li> Education: Bachelor's</li>
           <li>Growth: 21%</li>
       <h4>
