--- a/index.html
+++ b/index.html
@@ -83,16 +83,17 @@
    <a href="https://www.coralgablescavaliers.org/">
      <img src="https://www.coralgablescavaliers.org/pics/cav-logo.gif">
    </a>
+<hr>
        <h2 id="interests">Interests</h2>
       <p>
         <h4>
-        We used real-time job analysis software to examine more than 1.8 million job postings that list programming skills as a preference.1 The data helped us identify nine common programming careers to consider. Learn a little bit about these roles and see which of these coding jobs might appeal to you.</h4>
+        Some of the things I like to do in my free time is read manga, watch anime, and watch movies. Below, is a list of 3 of my favorites from each of my interests. I will also explain what makes those my favorite interests. </h4>
       </p>
       <h4>
         <ol>
         <h3 class="interests">My Favorite Manga</h3>
         <ul>
-          <li id="favorite-manga">Berserk</li>
+          <li id="favorite-manga">Berserk</li><h4>I had just recently started this manga a while back, I'm only a third into the story, but it is already great. The artsyle is amazing even though it does have a lot of gore. Unfortunately, the creator/mangaka Kentaro Miura has currently passed away this year :(  </h4>
           <li> JoJo's Bizzare Adventure</li>
           <li>Chainsaw Man</li>
       <h4>
@@ -100,16 +101,16 @@
         </li>
       <h3 class="interests"> My Favorite Anime </h3>
         <ul>
-          <li id="favorite-anime"> Samurai Champloo </li>
+          <li id="favorite-anime"> Samurai Champloo </li><h4> I love the way they mixed in hiphop and samurai's and somehow made it work in the anime. Also, the director of this anime also helped direct Cowboy Bebop, which is another of my favorites.</h4>
           <li> Cowboy Bebop </li>
           <li> Mob Psycho 100 </li>
         </ul>
         </li>
-          <h3 class="interests"> My favorite movies </h3>
+          <h3 class="interests"> My favorite Movies </h3>
         <ul>
-          <li id="favorite-movie">RedLine</li>
+          <li id="favorite-movie">RedLine</li><h4> Although the other two below this one are great stories and have great animation, my favorite out of these would be Redline, because the artstyle and the colors are amazing and it had immidiately caught my attention when I first watched it.</h4>
           <li>Spirited Away</li>
-          <li>Avengers Endgame</li>
+          <li>Spiderman Into The Spider Verse</li>
           </ol>
           
       <hr>
