--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name= "description" content= "My Personal Website Assignment">
     <meta name= "author" content= "Brandon Lanzarin">
     <meta name="viewport" content= "device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="main.css">
     <title> Brandon Lanzarin's Personal Website</title>
    <style>
      body {
