--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title> Brandon Lanzarin's Personal Website</title>
    
     <body>
+      <table>
       <h1>My Personal Website</h1>
+      <th> Nujabes - Araruian Dance</th>
+        </tr>
+        <tr>
+          <td>
+            <audio controls>
+              <source src="https://github.com/brndnl2006/brndnl2006.github.io/blob/main/audio/Nujabes%20%20-%20Aruarian%20dance.mp3?raw=true">
+            </audio>
+          </td>
+      </table>
       <h3 id="author">By: Brandon Lanzarin</h3>
       
      
