--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title> Brandon Lanzarin's Personal Website</title>
    
     <body>
-     
+     <header>
       <h1>My Personal Website</h1>
       <table id="background-music">
       <th> Nujabes - Araruian Dance</th>
@@ -26,6 +26,8 @@
         Hello & welcome to my personal website. My name is Brandon Lanzarin; and in this site, I will tell you some of my interests and where I come from.
       <hr>
       </p>
+  </header>
+<section>
    <h2 id="where-i-come-from">About me</h2>
       <p>
 <h4>I am 15 years old. I was born here in the US, but both my parents are from Mexico. For the first two years in my life, I lived in Miami, then my parents and I moved back to Mexico. For about 7 years, I stayed in Mexico in a pueblo located in Durango, called Pasaje. I lived there for a while but then we moved to Torreon, Coahuila. I don't remember the elementary or kindergarten I went to when I was in Mexico, but I do know the ones I was in here in the US. I went to Citrus Grove Elementary for 3rd-5th grade, Ponce De Leon Middle School for the 6th-8th grade; and I'm now currently in 9th grade in Coral Gables Senior High.</h4>
@@ -40,6 +42,8 @@
      <img src="https://www.coralgablescavaliers.org/pics/cav-logo.gif">
    </a>
 <hr>
+</section>
+<section>
        <h2 id="interests">Interests</h2>
       <p>
       <h4>
@@ -78,8 +82,11 @@
           <li>Spirited Away</li>
           <li>Spiderman Into The Spider Verse</li>
           </ol>
+       </section>
+<footer>
         <hr>
-          <h6 id="slide-right">Clicking on each image leads to the wikipedia page(interests) or their website(schools)</h6>
+       <h6 id="slide-right">Clicking on each image leads to the wikipedia page(interests) or their website(schools)</h6>
+</footer>
     </body>
   </head>
 </html>  
