--- a/index.html
+++ b/index.html
@@ -54,10 +54,26 @@
         <ol>
         <h3 class="interests">My Favorite Manga</h3>
         <ul>
-          <li id="favorite-manga">Berserk</li><h4>I had just recently started this manga a while back, I'm only a third into the story, but it is already great. The artsyle is amazing even though it does have a lot of gore. Unfortunately, the creator/mangaka Kentaro Miura has currently passed away this year :(  </h4>
+          <li id="favorite-manga">Berserk</li><h4>I had just recently started this manga a while back, I'm only a third into the story, but it is already great. The artsyle is amazing even though it does have a lot of gore. </h4>
+          <aside>
+         <h6>
+         Unfortunately, the creator/mangaka Kentaro Miura has currently passed away this year :( </h6>
+         </aside>
           <a href="https://en.wikipedia.org/wiki/Berserk_(manga)">
           <img class="interest-img" src="https://p.kindpng.com/picc/s/76-767161_berserk-logo-png-transparent-png.png"></a>
-          
+          <p>   
+          <span class="cap">  <caption> Kentaro Miura</caption> </span>
+    </section>
+    <section>
+      
+      <details>  
+      <figure>
+        <a href="https://en.wikipedia.org/wiki/Kentaro_Miura">
+          <img class="miura" src="https://upload.wikimedia.org/wikipedia/en/1/1a/Kentaro_Miura.png"></a>
+        <figcaption class ="cap">Kentaro Miura  </figcaption>
+      </figure>
+       </details>
+      </p>
           <li> JoJo's Bizzare Adventure</li>
           <li>Chainsaw Man</li>
       <h4>
