--- a/index.html
+++ b/index.html
@@ -92,9 +92,12 @@
           <h3 class="interests"> My favorite Movies </h3>
         <ul>
           <li id="favorite-movie">RedLine</li><h4> Although the other two below this one are great stories and have great animation, my favorite out of these would be Redline, because the artstyle and the colors are amazing and it had immidiately caught my attention when I first watched it.</h4>
-          <a href="https://en.wikipedia.org/wiki/Redline_(2009_film)">
-          <img class="interest-img" src="https://images.squarespace-cdn.com/content/v1/54fc8146e4b02a22841f4df7/1506089640532-LO1IA2L1VBCNDB96YTJJ/qH1TTSr.jpg?format=1000w">
-          </a>
+          <section>
+          <video width="500" height="280" controls loop autoplay>
+  <source src="https://github.com/brndnl2006/brndnl2006.github.io/blob/main/video/redline.mp4?raw=true" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+            </section>
           <li>Spirited Away</li>
           <li>Spiderman Into The Spider Verse</li>
           </ol>
