--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <ul>
           <li id="favorite-movie">RedLine</li><h4> Although the other two below this one are great stories and have great animation, my favorite out of these would be Redline, because the artstyle and the colors are amazing and it had immidiately caught my attention when I first watched it.</h4>
           <section>
-          <video width="500" height="280" controls loop autoplay>
+          <video width="500" height="280" controls autoplay loop>
   <source src="https://github.com/brndnl2006/brndnl2006.github.io/blob/main/video/redline.mp4?raw=true" type="video/mp4">
   Your browser does not support the video tag.
 </video>
