--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <header>
       <h1>My Personal Website</h1>
       <table id="background-music">
-      <th> Nujabes - Araruian Dance</th>
+      <th> Nujabes - Aruarian Dance</th>
         </tr>
         <tr>
           <td>
